fixing scrollbar moving content to left

--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,8 @@
 body {
     background-color: #000;
     color: #FFF;
+    width: 100vw;
+    overflow-x: hidden;
 }
 
 img {
